--- a/public/pet.html
+++ b/public/pet.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Pet Adoption System</h1>
 
+    <main>
     <section id="pet-list">
         <h2>Available Pets for Adoption</h2>
         <ul id="pets"></ul>
@@ -51,6 +52,7 @@
         <input type="text" id="deletePetName" placeholder="Enter Pet Name">
         <button onclick="deletePet()">Delete Pet</button>
     </section>
+    </main>
 
     <script src="/public/script.js"></script>
 </body>
